--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sain-api-context",
-  "version": "1.0.38",
-  "description": "Encrypting apikey and encrypting session key for mpesa openapi",
+  "version": "1.0.41",
+  "description": "Encrypting apikey and encrypting session key with RSA publicKey context used for mpesa openapi",
   "main": "ApiContext.js",
   "scripts": {
     "test": "jest"
